[UPDATE] обновление страницы 'о нас'

--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 358.3em;
+    background-size: 40.3em 375.3em;
 }
 
 .no-svg .svg-icon:before {
@@ -323,8 +323,17 @@
 
 
 
-  .svg-icon.svg-navigation:before {
+  .svg-icon.svg-medal-icon-1:before {
       background-position: 0em -158.9em;
+      width: 11.4em;
+      height: 17em;
+  }
+
+
+
+
+  .svg-icon.svg-navigation:before {
+      background-position: 0em -175.9em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -333,7 +342,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -166.7em;
+      background-position: 0em -183.7em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -342,7 +351,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -169.1em;
+      background-position: 0em -186.1em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -351,7 +360,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -193.3em;
+      background-position: 0em -210.3em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -360,7 +369,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -199.9em;
+      background-position: 0em -216.9em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -369,7 +378,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -206em;
+      background-position: 0em -223em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -378,7 +387,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -215.8em;
+      background-position: 0em -232.8em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -387,7 +396,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -240.1em;
+      background-position: 0em -257.1em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -396,7 +405,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -256.2em;
+      background-position: 0em -273.2em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -405,7 +414,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -275.6em;
+      background-position: 0em -292.6em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -414,7 +423,7 @@
 
 
   .svg-icon.svg-recept-product-print:before {
-      background-position: 0em -289em;
+      background-position: 0em -306em;
       width: 11.5em;
       height: 11.2em;
   }
@@ -423,7 +432,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -300.2em;
+      background-position: 0em -317.2em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -432,7 +441,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -313.6em;
+      background-position: 0em -330.6em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -441,7 +450,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -321.5em;
+      background-position: 0em -338.5em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -450,7 +459,7 @@
 
 
   .svg-icon.svg-srt-paper-plane:before {
-      background-position: 0em -326.8em;
+      background-position: 0em -343.8em;
       width: 2.8em;
       height: 2.8em;
   }
@@ -459,7 +468,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -329.6em;
+      background-position: 0em -346.6em;
       width: 10.3em;
       height: 7em;
   }
@@ -468,7 +477,7 @@
 
 
   .svg-icon.svg-str-right-light-color:before {
-      background-position: 0em -336.6em;
+      background-position: 0em -353.6em;
       width: 4.3em;
       height: 2.3em;
   }
@@ -477,7 +486,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -338.9em;
+      background-position: 0em -355.9em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -486,7 +495,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -342.2em;
+      background-position: 0em -359.2em;
       width: 2em;
       height: 1.8em;
   }
@@ -495,7 +504,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -344em;
+      background-position: 0em -361em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -504,7 +513,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -345.6em;
+      background-position: 0em -362.6em;
       width: 12.1em;
       height: 11em;
   }
@@ -513,7 +522,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -356.6em;
+      background-position: 0em -373.6em;
       width: 2.8em;
       height: 1.7em;
   }
