--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 375.3em;
+    background-size: 40.3em 409.3em;
 }
 
 .no-svg .svg-icon:before {
@@ -332,8 +332,26 @@
 
 
 
-  .svg-icon.svg-navigation:before {
+  .svg-icon.svg-medal-icon-2:before {
       background-position: 0em -175.9em;
+      width: 11.4em;
+      height: 17em;
+  }
+
+
+
+
+  .svg-icon.svg-medal-icon-3:before {
+      background-position: 0em -192.9em;
+      width: 11.4em;
+      height: 17em;
+  }
+
+
+
+
+  .svg-icon.svg-navigation:before {
+      background-position: 0em -209.9em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -342,7 +360,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -183.7em;
+      background-position: 0em -217.7em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -351,7 +369,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -186.1em;
+      background-position: 0em -220.1em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -360,7 +378,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -210.3em;
+      background-position: 0em -244.3em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -369,7 +387,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -216.9em;
+      background-position: 0em -250.9em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -378,7 +396,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -223em;
+      background-position: 0em -257em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -387,7 +405,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -232.8em;
+      background-position: 0em -266.8em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -396,7 +414,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -257.1em;
+      background-position: 0em -291.1em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -405,7 +423,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -273.2em;
+      background-position: 0em -307.2em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -414,7 +432,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -292.6em;
+      background-position: 0em -326.6em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -423,7 +441,7 @@
 
 
   .svg-icon.svg-recept-product-print:before {
-      background-position: 0em -306em;
+      background-position: 0em -340em;
       width: 11.5em;
       height: 11.2em;
   }
@@ -432,7 +450,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -317.2em;
+      background-position: 0em -351.2em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -441,7 +459,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -330.6em;
+      background-position: 0em -364.6em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -450,7 +468,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -338.5em;
+      background-position: 0em -372.5em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -459,7 +477,7 @@
 
 
   .svg-icon.svg-srt-paper-plane:before {
-      background-position: 0em -343.8em;
+      background-position: 0em -377.8em;
       width: 2.8em;
       height: 2.8em;
   }
@@ -468,7 +486,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -346.6em;
+      background-position: 0em -380.6em;
       width: 10.3em;
       height: 7em;
   }
@@ -477,7 +495,7 @@
 
 
   .svg-icon.svg-str-right-light-color:before {
-      background-position: 0em -353.6em;
+      background-position: 0em -387.6em;
       width: 4.3em;
       height: 2.3em;
   }
@@ -486,7 +504,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -355.9em;
+      background-position: 0em -389.9em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -495,7 +513,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -359.2em;
+      background-position: 0em -393.2em;
       width: 2em;
       height: 1.8em;
   }
@@ -504,7 +522,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -361em;
+      background-position: 0em -395em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -513,7 +531,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -362.6em;
+      background-position: 0em -396.6em;
       width: 12.1em;
       height: 11em;
   }
@@ -522,7 +540,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -373.6em;
+      background-position: 0em -407.6em;
       width: 2.8em;
       height: 1.7em;
   }
