--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -52,6 +52,6 @@ block content
             .prevs-box-row-el
               +icon('pack', 'svg')(class="pack")
     +askQuestionForm().bg-additional
-    +about().bg-additional
+    +about('О нас').bg-additional
     +subscriptionForm().bg-additional
     +footer().bg-additional
