--- a/app/scss/components/whereBuy/page.scss
+++ b/app/scss/components/whereBuy/page.scss
@@ -100,6 +100,7 @@
       padding: 20px 0;
       border: 1px solid #312930;
       border-left: 0;
+      user-select: none;
       border-right: 0;
       transition: 0.3s ease-out;
       padding-left: 100px;
@@ -110,7 +111,7 @@
       &:nth-child(n + 2) {
         margin-top: -1px;
       }
-      &:hover {
+      &:hover,&.active {
         border-color: #ee7754;
         z-index: 2;
         i {
