--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -29,7 +29,7 @@ mixin header
           a(href="./news_list.html") Новости и акции
           a(href="./partners.html") Партнерам
           a(href="#") Рецепты
-          a(href="#") Контакты
+          a(href="./contacts.html") Контакты
         .header-buttom-help
           .left
             .left-desc Служба поддержки потребителей
