--- a/app/scss/components/whereBuy/shops.scss
+++ b/app/scss/components/whereBuy/shops.scss
@@ -20,8 +20,17 @@
     border-left: 0;
     border-right: 0;
     margin-top: -1px;
+    transition: 0.3s ease-out;
     i{
       filter: grayscale(1) brightness(0);
+      transition: 0.3s ease-out;
+    }
+    &:hover,&.active {
+      border-color: #ee7754;
+      z-index: 2;
+      i {
+        filter: none;
+      }
     }
     @include screen("sm", "max"){
       padding: 20px 0;
