--- a/app/scss/base/ui.scss
+++ b/app/scss/base/ui.scss
@@ -381,15 +381,18 @@
       content: "";
       display: block;
       position: absolute;
-      right: 50%;
+      right: 5px;
       width: 1px;
       height: 5px;
-      top: 50%;
+      top: 0;
       background: inherit;
-      transition: 0.6s ease-in-out;
+      transition: 0.3s ease-in-out;
     }
     &:after {
       transform: translateY(-100%);
+    }
+    &:before{
+      top: 1px;
     }
   }
   &:hover {
