[NEW] Страница 'Как мы это делаем'

--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -16,6 +16,7 @@
 
 @import "partners/main";
 @import "partners/about";
+@import "partners/howdo";
 
 @import "recepts/list";
 @import "recepts/detail";
